1999-04-20  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* cid_mkmap.c (cid_mkmap): return last defined cid + 1.

	* open_font.c (open_font): fixed compile failure if gsub support
	missing.

	* main.c (main): use find_cid to read cid struct.
	(find_cid): dummy definition

	* write_cid2.c (write_cidmap): moved here from cid.c; now uses
	cid_mkmap.
	* cid_mkmap.c (cid_mkmap): new function

	* changed malloc to xmalloc and realloc to xrealloc throughout.

	* cid_util.c (cid_free), cid_write.c (cid_write), cid_read.c
	(cid_read), cid_awrite.c, (cid_awrite), cid_aread.c, (cid_aread),
	cid.h: allow for more than one vert feature.

1999-04-18  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* substext.h: moved basename declaration here from t42.h.

	* xmalloc.c (xrealloc): new function.

	* cidtoacid.c, acidtocid.c: new programs.
	
	* cid_read.c, cid_write.c, cid_aread.c, cid_awrite.c, cid_uitl.c,
	cid.h: new version of cid structure and reading and handling
	routines.

	* substext.c (substext): moved substext here from main.c (is
	reused in {a,}cidto{a,}cid).

1999-04-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* open_font.c (open_font): xheight and capheight are not parsed by
	FreeType.
	* write_afm.c (write_afm): ditto.

1999-03-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* t42.h: new members xheight and capheight.
	* open_font.c (open_font): set xheight and capheight.
	* write_afm.c (write_afm): write XHeight and CapHeight.

1999-02-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* write_afm.c (make_revenc): alloc enough space for reverse.

1999-01-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* util.c (write_sfnts): fixed bug (omitting newline when last line
	full).

	* get_name.c (get_name): accept only english mac names.

1999-01-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* write_cid2.c (write_cid2): added DSC comments.

	* cid.c (write_cidmap): new argument cid; changed callers.

1999-01-08  Dieter Baron  <dillo@danbala.tuwien.ac.at>
