@@ -12,3 +12,8 @@ http://www.adobe.com/supportservice/devrelations/PDFS/TN/5012.Type42_Spec.pdf
 Adobe Font Metrics File Format Specification -- Version 4.1
 Adobe Technical Note #5004
 http://www.adobe.com/supportservice/devrelations/PDFS/TN/5004.AFM_Spec.pdf
+
+CID-Keyed Fonts type 2 -- TrueType glyph procedure
+PostScript Language Reference, 3rd edition
+http://www.adobe.com/supportservice/devrelations/PDFS/TN/PLRM.pdf
+published by Addison Wesley, 1999, ISBN 0-201-37922-8
