@@ -41,7 +41,7 @@ fi
 
 AC_CHECK_HEADERS(libgen.h)
 
-AC_CHECK_FUNCS(TT_Init_GSUB_Extension)
+AC_CHECK_FUNCS(TTO_GSUB_Apply)
 
 AC_REPLACE_FUNCS(strdup strerror basename)
 AC_CHECK_FUNCS(getopt_long, , [LIBOBJS="$LIBOBJS getopt1.o getopt.o"])
